Prevent multiple column breaks in simple columns

--- a/web/modules/custom/simple_columns/css/simplecolumns.css
+++ b/web/modules/custom/simple_columns/css/simplecolumns.css
@@ -6,3 +6,9 @@
   break-before: column;
   -webkit-column-break-before: always;
 }
+
+/* Prevent multiple column breaks in our two simple columns. */
+.simple-columns--column-break + .simple-columns--column-break {
+  break-before: avoid;
+  -webkit-column-break-before: avoid;
+}
